--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,3 +4,5 @@ extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autoli
 rootProject.name = 'keeper_nest'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+include(":react-native-worklets")
+project(":react-native-worklets").projectDir = file("../node_modules/react-native-worklets/android")
