--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.82.1",
+    "appwrite": "^21.4.0",
     "react": "19.1.1",
     "react-native": "0.82.1",
-    "react-native-reanimated": "^4.1.3",
-    "react-native-safe-area-context": "^5.6.2"
+    "react-native-dotenv": "^3.4.11",
+    "react-native-reanimated": "^4.2.0-nightly-20250919-50efe3d0c",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-worklets": "^0.6.0-nightly-20250919-50efe3d0c"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli": "^20.0.2",
     "@react-native-community/cli-platform-android": "20.0.0",
     "@react-native-community/cli-platform-ios": "20.0.0",
     "@react-native/babel-preset": "0.82.1",
