--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.4",
     "@react-native/new-app-screen": "0.82.1",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.2",
     "appwrite": "^21.4.0",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-dotenv": "^3.4.11",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^4.2.0-nightly-20250919-50efe3d0c",
     "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.6.0-nightly-20250919-50efe3d0c"
   },
   "devDependencies": {
