--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.4",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/native": "^7.1.19",
@@ -19,6 +20,7 @@
     "react-native": "0.82.1",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-keychain": "^10.0.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^4.2.0-nightly-20250919-50efe3d0c",
     "react-native-safe-area-context": "^5.6.2",
