--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
     "appwrite": "^21.4.0",
+    "events": "^3.3.0",
     "git-filter-repo": "^0.0.30",
     "react": "19.1.1",
     "react-native": "0.82.1",
