--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-keychain": "^10.0.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-neat-date-picker": "^1.6.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^4.2.0-nightly-20250919-50efe3d0c",
     "react-native-safe-area-context": "^5.6.2",
