--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.8.4",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "@tanstack/react-query": "^5.90.11",
     "appwrite": "^21.4.0",
     "events": "^3.3.0",
     "git-filter-repo": "^0.0.30",
